feat: корректировка по тз
